# Voicecontrol

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml
src/: AudioCapture.cpp  AudioCapture.hpp  InputInjector.cpp  InputInjector.hpp  VolumeIndicator.cpp  VolumeIndicator.hpp  main.cpp
